astro/src/css/diagrams.css
[id^="mermaid-"] {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: auto;
  font-size: 16px !important;
  width: 100%
}

[id^="mermaid-"] .error-icon {
  fill: red !important;
}

[id^="mermaid-"] .error-text {
  fill: red !important;
  stroke: red !important;
}

[id^="mermaid-"] .marker {
  fill: black !important;
  stroke: black !important;
}

[id^="mermaid-"] .marker.cross {
  stroke: red !important;
}

[id^="mermaid-"] .actor {
  stroke: #94a3b8 !important;
  fill: #e2e8f0 !important;
}

.dark [id^="mermaid-"] .actor {
  stroke: #94a3b8 !important;
  fill: #1e293b !important;
}

[id^="mermaid-"] text.actor > tspan {
  fill: #1e293b !important;
  stroke: none !important;
}

.dark [id^="mermaid-"] text.actor > tspan {
  fill: #f8fafc !important;
  stroke: none !important;
}

[id^="mermaid-"] .actor-line {
  stroke: red !important;
}

[id^="mermaid-"] .messageLine0 {
  stroke: #64748b !important;
}

.dark [id^="mermaid-"] .messageLine0 {
  stroke: #e2e8f0 !important;
}

[id^="mermaid-"] .messageLine1 {
  stroke: #64748b !important;
}

.dark [id^="mermaid-"] .messageLine1 {
  stroke: #e2e8f0 !important;
}

[id^="mermaid-"] #arrowhead path {
  fill: #64748b !important;
  stroke: #64748b !important;
}

.dark [id^="mermaid-"] #arrowhead path {
  fill: #e2e8f0 !important;
  stroke: #e2e8f0 !important;
}

[id^="mermaid-"] .sequenceNumber {
  fill: #f1f5f9 !important;
  font-size: 16px;
}

[id^="mermaid-"] #sequencenumber {
  fill: #64748b !important;
}

.dark [id^="mermaid-"] #sequencenumber {
  fill: #334155 !important;
}

[id^="mermaid-"] #sequencenumber circle {
  r: 9px;
}

[id^="mermaid-"] #crosshead path {
  fill: #64748b !important;
  stroke: #64748b !important;
}

.dark [id^="mermaid-"] #crosshead path {
  fill: #e2e8f0 !important;
  stroke: #e2e8f0 !important;
}

[id^="mermaid-"] .messageText {
  fill: #1e293b !important;
  stroke: none !important;
}

.dark [id^="mermaid-"] .messageText {
  fill: #f8fafc !important;
  stroke: none !important;
}

[id^="mermaid-"] .labelBox {
  fill: #c7d2fe !important;
  stroke: #818cf8 !important;
}

.dark [id^="mermaid-"] .labelBox {
  fill: #3730a3 !important;
  stroke: #818cf8 !important;
}

[id^="mermaid-"] .labelText, [id^="mermaid-"] .labelText > tspan {
  fill: #1e293b !important;
  stroke: none !important;
}

.dark [id^="mermaid-"] .labelText, [id^="mermaid-"] .labelText > tspan {
  fill: #f8fafc !important;
  stroke: none !important;
}

[id^="mermaid-"] .loopText, [id^="mermaid-"] .loopText > tspan {
  fill: #f8fafc !important;
  stroke: none !important;
}

[id^="mermaid-"] .loopLine {
  fill: #c7d2fe !important;
  stroke: #818cf8 !important;
}

.dark [id^="mermaid-"] .loopLine {
  fill: #3730a3 !important;
  stroke: #818cf8 !important;
}

[id^="mermaid-"] .note {
  fill: #c7d2fe !important;
  stroke: #818cf8 !important;
}

.dark [id^="mermaid-"] .note {
  fill: #3730a3 !important;
  stroke: #818cf8 !important;
}

[id^="mermaid-"] .noteText, [id^="mermaid-"] .noteText > tspan {
  fill: #1e293b !important;
  stroke: none !important;
}

.dark [id^="mermaid-"] .noteText, .dark [id^="mermaid-"] .noteText > tspan {
  fill: #f1f5f9 !important;
  stroke: none !important;
}

[id^="mermaid-"] .activation0 {
  fill: #e2e8f0 !important;
  stroke: #94a3b8 !important;
}

.dark [id^="mermaid-"] .activation0 {
  fill: #1e293b !important;
  stroke: #94a3b8 !important;
}

[id^="mermaid-"] .activation1 {
  fill: red !important;
  stroke: red !important;
}

[id^="mermaid-"] .activation2 {
  fill: red !important;
  stroke: red !important;
}

[id^="mermaid-"] .actorPopupMenuPanel {
  fill: red !important;
}

[id^="mermaid-"] .actor-man line {
  fill: #e2e8f0 !important;
  stroke: #94a3b8 !important;
}

.dark [id^="mermaid-"] .actor-man line {
  fill: #e2e8f0 !important;
  stroke: #94a3b8 !important;
}

[id^="mermaid-"] .actor-man circle {
  fill: #e2e8f0 !important;
  stroke: #94a3b8 !important;
}

.dark [id^="mermaid-"] .actor-man circle {
  fill: #1e293b !important;
  stroke: #94a3b8 !important;
}

[id^="mermaid-"] line {
  stroke: #cbd5e1 !important;
  fill: #cbd5e1 !important;
}

.dark [id^="mermaid-"] line {
  stroke: #64748b !important;
  fill: #64748b !important;
}

foreignObject {
  overflow: visible;
}

